<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kontrol</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list_of_available_servers">Available servers</string>
    <string name="connect_text">Connect</string>
    <string name="connect_text_hint">password</string>
    <string name="password_text">Password</string>
    <string name="remember_password_text">&#160;Remember password</string>
	<string name="cancel_text">Cancel</string>
	<string name="show_password_text">&#160;Show password</string>
</resources>
