<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/red2" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkblue3"
        android:padding="7dp"
        android:textColor="@color/red2"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
    	android:paddingTop="20dp" >

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text" 
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/darkblue3"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/red2">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/checkBoxRememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password_text" 
            android:textSize="14sp"
            android:textColor="@color/darkblue3"
            android:button="@drawable/selector_checkbox"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp" >

        <CheckBox
            android:id="@+id/checkBoxShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox"
            android:text="@string/show_password_text"
            android:textColor="@color/darkblue3"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/buttonCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel_text"
            android:textColor="@color/red2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/buttonConnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/connect_text"
            android:textColor="@color/red2"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
